# drt-bridge-eth-sc-rs-main

./: Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh
bridge-proxy/: Cargo.toml  sc-config.toml
bridge-proxy/meta/: Cargo.toml
bridge-proxy/meta/src/: main.rs
bridge-proxy/scenarios/: bridge_proxy_execute_crowdfunding.scen.json
bridge-proxy/src/: bridge-proxy.rs  config.rs
bridge-proxy/tests/: bridge_proxy_blackbox_test.rs
bridge-proxy/tests/test-contract/: crowdfunding-dcdt.drtsc.json
bridge-proxy/wasm/: Cargo.toml
bridge-proxy/wasm/src/: lib.rs
bridged-tokens-wrapper/: Cargo.toml  sc-config.toml
bridged-tokens-wrapper/meta/: Cargo.toml
bridged-tokens-wrapper/meta/src/: main.rs
bridged-tokens-wrapper/scenarios/: add_wrapped_token.scen.json  blacklist_token.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  whitelist_token.scen.json  wrap_token.scen.json
bridged-tokens-wrapper/src/: dfp_big_uint.rs  events.rs  lib.rs
bridged-tokens-wrapper/tests/: bridged_tokens_wrapper_whitebox_test.rs  dfp_big_uint_test.rs  scenario_go_test.rs
bridged-tokens-wrapper/wasm/: Cargo.toml
bridged-tokens-wrapper/wasm/src/: lib.rs
dcdt-safe/: Cargo.toml  sc-config.toml
dcdt-safe/interaction/: snippets.sh
dcdt-safe/meta/: Cargo.toml
dcdt-safe/meta/src/: main.rs
dcdt-safe/scenarios/: add_refund_batch.scen.json  create_another_tx_ok.scen.json  create_another_tx_too_late_for_batch.scen.json  create_transaction_ok.scen.json  create_transaction_over_max_amount.scen.json  distribute_fees.scen.json  execute_batch_both_rejected.scen.json  execute_batch_both_success.scen.json  execute_batch_one_success_one_rejected.scen.json  execute_transaction_rejected.scen.json  execute_transaction_success.scen.json  get_next_pending_tx.scen.json  get_next_tx_batch.scen.json  get_next_tx_batch_too_early.scen.json  setup_accounts.scen.json  zero_fees.scen.json
dcdt-safe/src/: lib.rs
dcdt-safe/tests/: dcdt_safe_scenario_rs_test.rs  scenario_go_test.rs
dcdt-safe/wasm/: Cargo.toml
dcdt-safe/wasm/src/: lib.rs
docs/: gas_costs.md  relayer.md  setup.md
multi-transfer-dcdt/: Cargo.toml  README.md  sc-config.toml
multi-transfer-dcdt/interaction/: snippets.sh
multi-transfer-dcdt/meta/: Cargo.toml
multi-transfer-dcdt/meta/src/: main.rs
multi-transfer-dcdt/scenarios/: batch_transfer_both_executed.scen.json  batch_transfer_both_failed.scen.json  batch_transfer_one_executed_one_failed.scen.json  batch_transfer_to_frozen_account.scen.json  batch_transfer_with_wrapping.scen.json  setup_accounts.scen.json  transfer_fail_mint_burn_not_allowed.scen.json  transfer_ok.scen.json  two_transfers_same_token.scen.json
multi-transfer-dcdt/src/: dcdt_safe_proxy.rs  lib.rs  multi_transfer_proxy.rs
multi-transfer-dcdt/tests/: multi_transfer_blackbox_test.rs  multi_transfer_dcdt_scenario_rs_test.rs  scenario_go_test.rs
multi-transfer-dcdt/wasm/: Cargo.toml
multi-transfer-dcdt/wasm/src/: lib.rs
multisig/: Cargo.toml  README.md
multisig/interaction/: script-v3-release.sh
multisig/interaction/config/: aggregator-snippets.sh  configs.cfg  issue-tokens-snippets.sh  mainnet-release-v3.sh  menu_functions.cfg  multisig-snippets.sh  multitransfer-snippets.sh  proxy-snippets.sh  relayers-snippets.sh  safe-snippets.sh  testing.sh  wrapped-snippets.sh
multisig/interaction/release-v3/: config-setter.cfg  menu_functions.cfg
multisig/meta/: Cargo.toml
multisig/scenarios/: change_token_config.scen.json  create_dharitri_to_ethereum_tx_batch.scen.json  ethereum_to_dharitri_relayer_call_data_several_tx_test.scen.json  ethereum_to_dharitri_relayer_query2_test.scen.json  ethereum_to_dharitri_relayer_query_test.scen.json  ethereum_to_dharitri_tx_batch_ok.scen.json  ethereum_to_dharitri_tx_batch_ok_call_data_encoded.scen.json  ethereum_to_dharitri_tx_batch_rejected.scen.json  ethereum_to_dharitri_tx_batch_without_data.scen.json  execute_dharitri_to_ethereum_tx_batch.scen.json  reject_dharitri_to_ethereum_tx_batch.scen.json  setup.scen.json  unstake.scen.json
multisig/src/: action.rs  bridge_proxy_contract_proxy.rs  bridged_tokens_wrapper_proxy.rs  events.rs  lib.rs  multi_transfer_dcdt_proxy.rs  multisig_general.rs  multisig_proxy.rs  queries.rs  setup.rs  storage.rs  user_role.rs  util.rs
multisig/tests/: multisig_blackbox_test.rs  multisig_scenario_rs_test.rs  scenario_go_test.rs
multisig/wasm/: Cargo.toml
multisig/wasm/src/: lib.rs
price-aggregator/: dharitri-price-aggregator-sc.abi.json  (+2 more)
test-caller/: Cargo.toml
test-caller/meta/: Cargo.toml
test-caller/meta/src/: main.rs
test-caller/src/: test-caller.rs
test-caller/wasm/: Cargo.toml
test-caller/wasm/src/: lib.rs
(+19 files in other folders)
