[package]
name = "bridged-tokens-wrapper"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.dharitri-sc]
version = "=0.52.3"

[dependencies.dharitri-sc-modules]
version = "=0.52.3"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.52.3"
