[package]
name = "dcdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.dharitri-price-aggregator-sc]
version = "=0.52.0"

[dependencies.dharitri-sc]
version = "=0.52.3"

[dependencies.dharitri-sc-modules]
version = "=0.52.3"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.52.3"
