[package]
name = "test-caller"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/test-caller.rs"

[dependencies.dharitri-sc]
version = "=0.52.3"

[dependencies.dharitri-sc-modules]
version = "0.52.3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.52.3"
